--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     /* padding: 0 200px; */
 }
 
-img {
+.rightside img {
     width: 350px;
     height: auto;
     
@@ -81,4 +81,39 @@ ul {
 
 .rightside{
     flex: 1;
+}
+
+/* Second Section */
+
+.second-container {
+    display: flex;
+    flex-direction: column;
+    padding: 0 200px;
+    align-items: center;
+    padding: 10px;
+}
+
+p {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+.textimage {
+    display: flex;
+    gap: 5px;
+    font-size: 14px; 
+    justify-content: center;
+    align-items: center;
+}
+
+.smallimage div {
+    text-align: center;
+    width: 250px;
+}
+
+.smallimage img {
+    width: 250px;
+    height: auto
+    /* display: flex; */
+    /* flex-wrap: wrap; */
 }
