--- a/style.css
+++ b/style.css
@@ -16,14 +16,18 @@ body {
 h1 {
     font-size: 24px;
     color: #F9FAF8;
-    
+    margin-left: 80px;
 }
 
 li {
     list-style-type: none;
 }
 
-a{
+ul a {
+    border: none;
+}
+
+a {
     color: #E5E7EB;
 }
 
@@ -31,6 +35,8 @@ a{
     width: 100px;
     background: #3882F6;
     color: white;
+    font-weight: 700;
+    font-size: 15px;
     border-radius: 8px;
     padding: 6px 14px;
     margin-top: 10px;
@@ -46,7 +52,7 @@ a{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex: 100%;
+    /* flex: 100%; */
 }
 
 ul {
@@ -146,4 +152,61 @@ p {
     font-weight: bold; 
     align-self: flex-end;
     margin: 5px;
+}
+
+/* Section Four */
+
+.fourth-container {
+    padding: 100px 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.actionwrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.action-signup {
+    display: flex;
+    width: 700px;
+    height: 100px;
+    padding: 0 100px;
+    background: #3882F6;
+    color: white;
+    border-radius: 8px;
+    justify-content: center;
+    align-items: center;
+}
+
+.actiontext {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+
+}
+
+a {
+    text-decoration: none;
+    border: 2px solid white;
+    padding: 5px 15px;
+    border-radius: 8px;
+    font-weight: 700;
+    font-size: 15px;
+    width: 80px;
+    text-align: center;
+}
+
+.footer {
+    background: #1F2937;
+    color: white;
+    height: 72px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+span {
+    font-weight: 800;
 }
